Add getUserPosition, some geolocation refactor, change colors to green

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,19 +2,19 @@
   --font-family: sans-serif;
 
   /* Change the primary theme color to lime using primitives */
-  /* --sl-color-primary-50: var(--sl-color-lime-50);
-    --sl-color-primary-100: var(--sl-color-lime-100);
-    --sl-color-primary-200: var(--sl-color-lime-200);
-    --sl-color-primary-300: var(--sl-color-lime-300);
-    --sl-color-primary-400: var(--sl-color-lime-400);
-    --sl-color-primary-500: var(--sl-color-lime-500);
-    --sl-color-primary-600: var(--sl-color-lime-600);
-    --sl-color-primary-700: var(--sl-color-lime-700);
-    --sl-color-primary-800: var(--sl-color-lime-800);
-    --sl-color-primary-900: var(--sl-color-lime-900);
-    --sl-color-primary-950: var(--sl-color-lime-950);
+  --sl-color-primary-50: var(--sl-color-green-50);
+  --sl-color-primary-100: var(--sl-color-green-100);
+  --sl-color-primary-200: var(--sl-color-green-200);
+  --sl-color-primary-300: var(--sl-color-green-300);
+  --sl-color-primary-400: var(--sl-color-green-400);
+  --sl-color-primary-500: var(--sl-color-green-500);
+  --sl-color-primary-600: var(--sl-color-green-600);
+  --sl-color-primary-700: var(--sl-color-green-700);
+  --sl-color-primary-800: var(--sl-color-green-800);
+  --sl-color-primary-900: var(--sl-color-green-900);
+  --sl-color-primary-950: var(--sl-color-green-950);
 
-    --sl-color-neutral-0: var(--sl-color-lime-50) */
+  /* --sl-color-neutral-0: var(--sl-color-lime-50) */
 }
 
 html,
@@ -30,8 +30,4 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-html,
-body {
 }
