Add caching templates in index, add commented 3 main colors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,9 @@
   --sl-color-primary-900: var(--sl-color-green-900);
   --sl-color-primary-950: var(--sl-color-green-950);
 
-  /* --sl-color-neutral-0: var(--sl-color-lime-50) */
+  /* green: #37a26e */
+  /* orange: #f97a2c */
+  /* blue: #2e96f8 */
 }
 
 html,
