--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,3 +47,8 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.icon-button:hover:not(.icon-button--disabled),
+.icon-button:focus-visible:not(.icon-button--disabled) {
+  color: unset;
+}
