--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,10 +18,10 @@
   --color-green: #37a26e;
 
   /* orange: #f97a2c */
-  /* --color-orange: #f97a2c; */
-  --color-orange: #ffa755;
+  --color-orange: #f97a2c;
+  /* --color-orange: #ffa755; */
 
-  --color-orange-light: #fff5ef;
+  --color-orange-light: #ffeee4;
 
   /* blue: #2e96f8 */
   --color-blue: #2e96f8;
@@ -46,9 +46,4 @@ body {
 
 * {
   box-sizing: border-box;
-}
-
-.icon-button:hover:not(.icon-button--disabled),
-.icon-button:focus-visible:not(.icon-button--disabled) {
-  color: unset;
 }
