--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,23 @@
   --sl-z-index-toast: 1009;
 
   /* ----------------COLORS---------------------------- */
+  /* ORANGE */
   --color-primary: #f97a2c;
   --color-primary-light: #ffeee4;
 
+  /* GREEN */
+  --color-secondary: #00c5b7;
+  --color-secondary-light: #c4f4f0;
+
+  /* BLUE */
+  /* --color-ternary: #00c5b7;
+  --color-ternary-light: #c4f4f0; */
+
+  /* BLUE tecnical */
+  --color-blue: #2e96f8;
+
   /* -------------------OLD VALUES--------------------- */
-  --sl-color-primary-50: var(--sl-color-green-50);
+  /* --sl-color-primary-50: var(--sl-color-green-50);
   --sl-color-primary-100: var(--sl-color-green-100);
   --sl-color-primary-200: var(--sl-color-green-200);
   --sl-color-primary-300: var(--sl-color-green-300);
@@ -18,10 +30,10 @@
   --sl-color-primary-700: var(--sl-color-green-700);
   --sl-color-primary-800: var(--sl-color-green-800);
   --sl-color-primary-900: var(--sl-color-green-900);
-  --sl-color-primary-950: var(--sl-color-green-950);
+  --sl-color-primary-950: var(--sl-color-green-950); */
 
   /* green: #37a26e */
-  --color-green: #37a26e;
+  /* --color-green: #37a26e; */
 
   /* orange: #f97a2c */
   /* --color-primary: #f97a2c; */
@@ -29,7 +41,7 @@
   /* --color-primary-light: #ffeee4; */
 
   /* blue: #2e96f8 */
-  --color-blue: #2e96f8;
+  /* --color-blue: #2e96f8; */
 }
 
 html,
