Add border radius to footer, add border

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
   /* ORANGE */
   --color-primary: #f97a2c;
   --color-primary-light: #ffeee4;
+  --color-primary-trans: #f97a2c82;
 
   /* GREEN */
   --color-secondary: #00c5b7;
