--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,11 @@
   /* BLUE tecnical */
   --color-blue: #2e96f8;
 
+  /* ----------------BORDER-RADIUS------------------- */
+  --border-radius-big: 40px;
+  --border-radius-medium: 20px;
+  --border-radius-small: 10px;
+
   /* -------------------OLD VALUES--------------------- */
   /* --sl-color-primary-50: var(--sl-color-green-50);
   --sl-color-primary-100: var(--sl-color-green-100);
