Add --color-white, use it in all whte backgrounds

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,9 @@
   /* BLUE tecnical */
   --color-blue: #2e96f8;
 
+  /* WHITE */
+  --color-white: #f6f6f6;
+
   /* ----------------BORDER-RADIUS------------------- */
   --border-radius-big: 40px;
   --border-radius-medium: 20px;
