--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@
   --color-blue: #2e96f8;
 
   /* WHITE */
-  --color-white: #f6f6f6;
+  --color-white: #fffaf6;
 
   /* ----------------BORDER-RADIUS------------------- */
   --border-radius-big: 40px;
