Change green color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,8 @@
   --color-primary-light: #f8f1ed;
 
   /* GREEN */
-  --color-secondary: #00c5b7;
+  /* --color-secondary: #00c5b7; */
+  --color-secondary: #00bd31;
   --color-secondary-light: #c4f4f0;
 
   /* BLUE */
