Change modal close icon color, Change height of modal to 80%, Message when destroy doghouse

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,8 +9,8 @@
   --color-primary-light: #ffeee4;*/
 
   --color-primary: #ff6100;
-  --color-primary-medium: #ffd2b6;
-  --color-primary-light: #f8f1ed;
+  --color-primary-medium: #ffc6a3;
+  --color-primary-light: #f9f6f4;
 
   /* GREEN */
   /* --color-secondary: #00c5b7; */
