Change border-radius-circle to 999px

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
   --border-radius-big: 24px;
   --border-radius-medium: 16px;
   --border-radius-small: 8px;
-  --border-radius-circle: 50%;
+  --border-radius-circle: 999px;
 }
 
 html,
