--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -65,4 +65,7 @@ body {
 
 * {
   box-sizing: border-box;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10+ and Edge */
+  user-select: none; /* Standard syntax */
 }
