remove blue overlay from buttons

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,4 +68,5 @@ body {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10+ and Edge */
   user-select: none; /* Standard syntax */
+  -webkit-tap-highlight-color: transparent;
 }
