--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,4 +69,5 @@ body {
   -ms-user-select: none; /* IE 10+ and Edge */
   user-select: none; /* Standard syntax */
   -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none; /* iOS Safari */
 }
